--- a/1. HTML/index.html
+++ b/1. HTML/index.html
@@ -46,6 +46,13 @@
 
     <img src="http://www.wikihow.com/images/thumb/9/99/Install-Software-in-Ubuntu-Step-1.jpg/900px-Install-Software-in-Ubuntu-Step-1.jpg" width="200" height="500">
 
+    <table>
+        <tr><th>Names</th><th>Age</th><th>Gender</th></tr>
+        <tr><td>Mauricio</td><td>17</td><td>Male</td></tr>
+        <tr><td>Rodolfo</td><td>20</td><td>Male</td></tr>
+        <tr><td>Gaby</td><td>23</td><td>Female</td></tr>
+    </table>
+
 </div>
 </body>
 </html>
