--- a/2. CSS/bbc.html
+++ b/2. CSS/bbc.html
@@ -1,91 +1,118 @@
 <!doctype html>
 <html>
 <head>
-    <title>Learning CSS</title>
+    <title>Mauricio's BBC</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style type="text/css">
-        .large{
-            font-size: 300%;
+
+        body{
+            margin: 0;
+            font-family: arial, helvetica, arial, sans-serif;
         }
 
-        #green{
-            color: green;
+        #topbar{
+            background-color: #7A0000;
+            width:100%;
+            height: 42px;
+            color: white;
+            float:left;
         }
 
-        .underlined{
-            text-decoration: underline;
+        .fixedwidth{
+            width:1050px;
+            margin:0 auto;
         }
 
-        .bold{
-            font-weight:bold;
+        #logodiv{
+            padding-top: 3px;
+            float: left;
+            border-right: 1px solid #990000;
+            padding-right: 10px;
         }
 
-        .purplebox{
-            background-color: #B404AE;
+        #signindiv{
+            padding: 0 40px 11px 20px;
             width: 200px;
-            height: 200px;
-            padding: 10px 100px;
+            font-weight: bold;
+            font-size: 0.9em;
+            float: left;
+            border-right: 1px solid #990000;
         }
 
-        .redbox{
-            background-color: red;
-            width: 400px;
-            height: 220px;
+        #signindiv img{
+            position: relative;
+            top: 7px;
         }
 
-        p{
+        #signindiv p{
+            position: relative;
+            top: 3px;
+        }
+
+        #topmenudiv{
+            float:left;
+        }
+
+        #topmenudiv ul{
+            margin: 0;
             padding: 0;
-            margin:0;
         }
 
-        .reddiv{
-            width: 100px;
-            background-color: red;
-            float: left;
+        #topmenudiv li{
+            float:left;
+            list-style: none;
+            font-weight: bold;
+            font-size: 0.9em;
+            border-right: 1px solid #990000;
+            height:100%;
+            padding: 12px 20px 10px 20px;
         }
 
-        .bluediv{
-            width: 100px;
-            background-color: blue;
-            float: left;
-        }
-
-        .greendiv{
-            width:100px;
-            background-color: green;
-            float: left;
+        #searchdiv {
+            float:left;
+            padding: 8px;
         }
     </style>    
 </head>
 
 <body>
-    <div class="reddiv">
-        Blah
+
+    <div id="container">
+
+        <div id="topbar">
+            <div class="fixedwidth">
+                <div id="logodiv">
+                    <img src="images/bbclogo.png">
+                </div>
+
+                <div id="signindiv">
+                    <img src="images/login.png"> Sign In
+                </div>
+
+                <div id="topmenudiv">
+                    <ul>
+                        <li>News</li>
+                        <li>Sport</li>
+                        <li>Weather</li>
+                        <li>iPlayer</li>
+                        <li>TV</li>
+                        <li>Radio</li>
+                        <li>More...</li>
+                    </ul>
+                </div>
+
+                <div id="searchdiv">
+                    <input type="text"/>
+                </div>
+            </div>
+        </div>
+
+
+
     </div>
-
-    <div class="bluediv">
-        Bleh
-    </div>
-
-    <div class="greendiv">
-        Bluh
-    </div>
-
-    <div class="purplebox">
-        <p class="large">This is some text.</p>
-    </div>
-
-    <div class="redbox">
-        <p id="green" class="large">This is more text.</p>
-    </div>
-
-    <p class="large">This is some text.</p>
-
-    <p id="green" class="large">More text.</p>
-
-    <p>The third <span class="underlined large bold">word</span> in this paragraph is underlined, large and bold</p>
+    
 </body>
 </html>
