--- a/2. CSS/bbc.html
+++ b/2. CSS/bbc.html
@@ -6,296 +6,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style type="text/css">
 
-        body{
-            margin: 0;
-            font-family: arial, helvetica, arial, sans-serif;
-        }
-
-        #topbar{
-            background-color: #7A0000;
-            width:100%;
-            height: 42px;
-            color: white;
-            float:left;
-        }
-
-        .fixedwidth{
-            width:1150px;
-            margin:0 auto;
-        }
-
-        #logodiv{
-            padding-top: 3px;
-            float: left;
-            border-right: 1px solid #990000;
-            padding-right: 10px;
-        }
-
-        #logodiv img{
-            padding-top: 3px;
-        }
-
-        #signindiv{
-            padding: 1px 40px 11px 20px;
-            width: 200px;
-            font-weight: bold;
-            font-size: 0.9em;
-            float: left;
-            border-right: 1px solid #990000;
-        }
-
-        #signindiv img{
-            position: relative;
-            top: 8px;
-        }
-
-        #signindiv p{
-            position: relative;
-            top: 3px;
-        }
-
-        #topmenudiv{
-            float:left;
-        }
-
-        #topmenudiv ul{
-            margin: 0;
-            padding: 0;
-        }
-
-        #topmenudiv li{
-            float:left;
-            list-style: none;
-            font-weight: bold;
-            font-size: 0.9em;
-            border-right: 1px solid #990000;
-            height:100%;
-            padding: 12px 20px 10px 20px;
-        }
-
-        #searchdiv {
-            float:left;
-            padding: 7.5px 0 0 10px;
-        }
-
-        #searchdiv input{
-            height:25px;
-            border:none;
-            padding-left: 10px;
-            font-size: 0.9em;
-            background-image: url("images/magnify.png");
-            background-repeat: no-repeat;
-            background-position: right center;
-        }
-
-        .break{
-            clear:both;
-        }
-
-        #newsbar{
-            background-color: #990000;
-            width:100%;
-            height: 90px;
-            color: white;
-            float:left;
-        }
-
-        #newsbar p{
-            margin:0;
-            padding:0;
-            padding-top: 10px;
-            float:left;
-        }
-
-        #newsheader {
-            font-size: 3em;
-        }
-
-        #uk{
-            font-size: .7em;
-            padding-left: 15px;
-        }
-
-        #rss{
-            float:right;
-            margin-top: 35px;
-        }
-
-        #rss img{
-            height: 14px;
-            margin-top: 13px;
-            padding-left: 2px;
-        }
-
-        #rss p{
-            font-weight: bold;
-        }
-
-        #topicmenu{
-
-        }
-
-        #topicmenu ul{
-            background-color: #3E0C0D;
-            padding: 5px 0 0 5px;
-            margin: 0;
-            height: 18px;
-        }
-
-        #topicmenu li{
-            list-style: none;
-            font-size: 0.8em;
-            border-right: 1px solid #990000;
-            padding: 0 6px 0 6px;
-            float:left;
-            background-color: none;
-        }
-
-        .selected{
-            background-color: #EDEDED;
-            color:darkgray;
-            height: 19px;
-            position: relative;
-            top: -4px;
-            padding-top: 4px !important;
-        }
-
-        #content{
-            width:100%;
-            color: #535353;
-            font-size: .8em;
-        }
-
-        .date{
-            font-weight: bold;
-        }
-
-        h1{
-            color: #1F4F82;
-            font-size: 2.5em;
-        }
-
-        .headlineimage{
-            width: 500px;
-            float: left;
-        }
-
-        .newsitem{
-            position:relative;
-            left:10px;
-            top: -15px;
-            width: 280px;
-            float:left;
-            font-size: 1.1em;
-        }
-
-        .newsitem a{
-            color: #1F4F82;
-        }
-
-        a{
-            text-decoration: none;
-        }
-
-        a:hover{
-            text-decoration: underline;
-        }
-
-        .video{
-            background-image:url("images/triangle.png");
-            background-repeat:  no-repeat;
-            background-size: 18px;
-            background-position: left center;
-            padding-left: 20px;
-        }
-
-        .links{
-            line-height: 1.6em;
-        }
-
-        .sound{
-            background-image:url("images/sound.png");
-            background-repeat:  no-repeat;
-            background-size: 18px;
-            background-position: left center;
-            padding-left: 20px;
-        }
-
-        #watchlisten{
-            background-color: #EEEEEE;
-            float:right;
-            width: 360px;
-            position: relative;
-            top:-80px;
-        }
-
-        h2 {
-            color: #505050;
-            margin: 10px 0 10px 10px;
-            font-size: 1.8em;
-        }
-
-        .box{
-            float:right;
-            margin:15px 10px 0 0;
-            width: 60px;
-        }
-
-        .leftarrow{
-            float:left;
-            border-right:1px solid white;
-            width: 27px;
-            height: 144px;
-        }
-
-        .wlblock{
-            float:left;
-            background-color: #D1700E;
-            border:1px solid white;
-            width: 150px;
-
-        }
-
-        .wlblock a{
-            color:white;
-        }
-
-        .wlblock p{
-            margin: 12px 10px 12px 10px;
-        }
-
-        .wlblock img{
-            width:150.5px;
-        }
-
-        .rightarrow img{
-            float:left;
-            height: 144px;
-            width:27px;
-        }
-
-        #watchlisten ul{
-            margin: 0;
-            padding: 0 10px 10px 10px;
-        }
-
-        #watchlisten li{
-            list-style: none;
-            background-image: url("images/live.png");
-            background-size: 30px;
-            background-repeat: no-repeat;
-            background-position: left center;
-            padding: 10px 0 10px 50px;
-            font-size: 1.5em;
-        }
-
-        .bb{
-            border-bottom: 1px solid #DDDDDD;
-        }
-
-    </style>    
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
@@ -365,7 +77,7 @@
                         <li>Weather</li>
                         <li>Entertainment & Arts</li>
                         <li>Health</li>
-                        <li style="border-right:none;">In Pictures</li>
+                        <li style="border-right:none">In Pictures</li>
                     </ul>
 
                 </div>
