Added Script innerHTML

--- a/3. Javascript/index.html
+++ b/3. Javascript/index.html
@@ -11,7 +11,23 @@
 
 <body>
 
+	<p id="text">Some text</p>
+
     <button onclick="alert('Hi!')">Click Me!</button>
+
+    <script type="text/javascript">
+
+    	// This is a comment
+
+    	/*
+    	
+    	Multi line comment
+
+    	*/
+
+    	document.getElementById("text").innerHTML="Some more text";
+
+    </script>
 
 </body>
 </html>
