--- a/3. Javascript/index.html
+++ b/3. Javascript/index.html
@@ -11,21 +11,38 @@
 
 <body>
 
-	<p id="text">Some text</p>
+    <button id="textChanger">Change first div text</button>
 
-    <button onclick="alert('Hi!')">Click Me!</button>
+    <div id="firstDiv">This is some text</div>
+
+    <button id="textAppender">Append some text</button>
+
+    <div id="secondDiv">Javascript is...</div>
+
+    <button id ="textCreator">Create some text</button>
+
+    <div id="emptyDiv"></div>
 
     <script type="text/javascript">
 
-    	// This is a comment
+    	document.getElementById("textChanger").onclick=function() {
 
-    	/*
-    	
-    	Multi line comment
+    		document.getElementById("firstDiv").innerHTML=("Different text.");
 
-    	*/
+    	}
 
-    	document.getElementById("text").innerHTML="Some more text";
+    	document.getElementById("textAppender").onclick=function() {
+
+    		document.getElementById("secondDiv").innerHTML= document.getElementById("secondDiv").innerHTML + "great!";
+
+    	}
+
+    	document.getElementById("textCreator").onclick=function() {
+
+    		document.getElementById("emptyDiv").innerHTML = "<ul><li>Cat</li><li>Dog</li></ul>";
+
+    	}
+
 
     </script>
 
