--- a/3. Javascript/index.html
+++ b/3. Javascript/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Learning Javascript</title>
+    <title>Learning Javascrit</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
