--- a/3. Javascript/index.html
+++ b/3. Javascript/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Learning Javascrit</title>
+    <title>Learning Javascript</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
@@ -10,11 +10,6 @@
 </head>
 
 <body>
-
-
-
-
-    
 
     <button id="textChanger">Change first div text</button>
 
