--- a/3. Javascript/index.html
+++ b/3. Javascript/index.html
@@ -6,40 +6,27 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <style>
+        #circle {
+            width: 200px;
+            height: 200px;
+            border-radius: 100px;
+            background-color: red;
+        }
+    </style>
     
 </head>
 
 <body>    
 
-    <button id="textChanger">Change first div text</button>
-
-    <div id="firstDiv">This is some text</div>
-
-    <button id="textAppender">Append some text</button>
-
-    <div id="secondDiv">Javascript is...</div>
-
-    <button id ="textCreator">Create some text</button>
-
-    <div id="emptyDiv"></div>
+    <div id="circle"></div>
 
     <script type="text/javascript">
 
-    	document.getElementById("textChanger").onclick=function() {
+    	document.getElementById("circle").onclick=function() {
 
-    		document.getElementById("firstDiv").innerHTML=("Different text.");
-
-    	}
-
-    	document.getElementById("textAppender").onclick=function() {
-
-    		document.getElementById("secondDiv").innerHTML= document.getElementById("secondDiv").innerHTML + "great!";
-
-    	}
-
-    	document.getElementById("textCreator").onclick=function() {
-
-    		document.getElementById("emptyDiv").innerHTML = "<ul><li>Cat</li><li>Dog</li></ul>";
+    		document.getElementById("circle").style.display="none";
 
     	}
 
