--- a/3. Javascript/index.html
+++ b/3. Javascript/index.html
@@ -6,27 +6,26 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <style>
-        #circle {
-            width: 200px;
-            height: 200px;
-            border-radius: 100px;
-            background-color: red;
-        }
-    </style>
     
 </head>
 
 <body>    
 
-    <div id="circle"></div>
+    <input id="myInput" type="text" value="test"/>
+
+    <button id="textChanger">Change text</button>
+
+    <div id="firstDiv">Some text</div>
 
     <script type="text/javascript">
 
-    	document.getElementById("circle").onclick=function() {
+        var newText;
 
-    		document.getElementById("circle").style.display="none";
+    	document.getElementById("textChanger").onclick=function() {
+
+            newText = document.getElementById("myInput").value;
+
+    		document.getElementById("firstDiv").innerHTML=(newText);
 
     	}
 
