--- a/3. Javascript/index.html
+++ b/3. Javascript/index.html
@@ -19,13 +19,26 @@
 
     <script type="text/javascript">
 
+        var myArray = new Array();
+
+        myArray[0] = "pizza";
+        myArray[1] = "chocolate";
+
+        console.log(myArray);
+
+        myOtherArray = ["rain", "sunshine"];
+
+        myOtherArray.push("snow");
+
+        myOtherArray.splice(1, 0, "hail", "cloudy");
+
+        console.log(myOtherArray.length);
+
         var newText;
 
     	document.getElementById("textChanger").onclick=function() {
 
-            newText = document.getElementById("myInput").value;
-
-    		document.getElementById("firstDiv").innerHTML=(newText);
+    		document.getElementById("firstDiv").innerHTML=(myArray[0]);
 
     	}
 
