--- a/3. Javascript/index.html
+++ b/3. Javascript/index.html
@@ -11,36 +11,27 @@
 
 <body>    
 
-    <input id="myInput" type="text" value="test"/>
+    <p>What is the weather?</p>
 
-    <button id="textChanger">Change text</button>
+    <input id="weather"/>
 
-    <div id="firstDiv">Some text</div>
+    <button id="myButton">Submit</button>
 
     <script type="text/javascript">
 
-        var myArray = new Array();
+        document.getElementById("myButton").onclick=function(){
 
-        myArray[0] = "pizza";
-        myArray[1] = "chocolate";
+            if (document.getElementById("weather").value == "rain") {
 
-        console.log(myArray);
+                alert ("It's raining");
 
-        myOtherArray = ["rain", "sunshine"];
+            } else {
 
-        myOtherArray.push("snow");
+                alert ("It's not raining");
 
-        myOtherArray.splice(1, 0, "hail", "cloudy");
+            }
 
-        console.log(myOtherArray.length);
-
-        var newText;
-
-    	document.getElementById("textChanger").onclick=function() {
-
-    		document.getElementById("firstDiv").innerHTML=(myArray[0]);
-
-    	}
+        }
 
     </script>
 
