--- a/3. Javascript/index.html
+++ b/3. Javascript/index.html
@@ -11,45 +11,21 @@
 
 <body>    
 
-    <p>How many fingers am I holding up?</p>
-
-    <input id="answer"/>
-
-    <p>What's my favorite food?</p>
-
-    <input id="answerFood"/>
-
-    <button id="myButton">Submit</button>
+    <p id="arrayString"></p>
 
     <script type="text/javascript">
 
-        document.getElementById("myButton").onclick=function(){
+        var arrayString = "";
 
-            var cArray = Array();
+        var myArray = ["pizza", "chocolate", "crisps"];
 
-            cArray.push("pizza", "spaghetti", "oreos");
+        for (var i = 0; i < myArray.length; i++) {
 
-            var xF = cArray[Math.floor(3*Math.random())];
+            arrayString = arrayString + myArray[i] + " ";
 
-            var x = Math.random();
-
-            x = 6*x;
-
-            x = Math.floor(x);
-
-            if (xF == document.getElementById("answerFood").value) {
-                alert("That's correct!");
-
-            } else {
-                alert("That's wrong! My favorite food is " + xF);
-            }
-
-            if (x == document.getElementById("answer").value) {
-                alert("That's correct!");
-            } else {
-                alert("That's wrong! My number was " + x);
-            }
         }
+
+        document.getElementById("arrayString").innerHTML=arrayString;
 
     </script>
 
