Added reverse finger challenge

--- a/3. Javascript/index.html
+++ b/3. Javascript/index.html
@@ -10,22 +10,44 @@
 </head>
 
 <body>    
+    <p>How many fingers are you holding up?</p>
 
-    <p id="arrayString"></p>
+    <input id="myNumber"/>
+
+    <button id="guess">Guess!</button>
 
     <script type="text/javascript">
 
-        var arrayString = "";
+        document.getElementById("guess").onclick=function(){
+            var gotIt = false; var guesses = 1; var x; var givenUp = false;
 
-        var myArray = ["pizza", "chocolate", "crisps"];
+            while (gotIt == false && givenUp == false) {
+                x = Math.random();
 
-        for (var i = 0; i < myArray.length; i++) {
+                x = 6 * x;
 
-            arrayString = arrayString + myArray[i] + " ";
+                x = Math.floor(x);
+
+                if (x == document.getElementById("myNumber").value) {
+                    gotIt = true;
+                } else {
+                    guesses++;
+
+                    if(guesses > 10) {
+                        givenUp = true;
+                    }
+                }
+            }
+
+            if (gotIt == true){
+
+                alert("Got it! It was " + x + ". It took me " + guesses + " guesses");
+
+            } else {
+                alert("I give up!");
+            }
 
         }
-
-        document.getElementById("arrayString").innerHTML=arrayString;
 
     </script>
 
