--- a/3. Javascript/index.html
+++ b/3. Javascript/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>    
-    <p>How many fingers are you holding up?</p>
+    <p id="paragraph">How many fingers are you holding up?</p>
 
     <input id="myNumber"/>
 
@@ -18,36 +18,13 @@
 
     <script type="text/javascript">
 
-        document.getElementById("guess").onclick=function(){
-            var gotIt = false; var guesses = 1; var x; var givenUp = false;
+        function adding(a, b) {
 
-            while (gotIt == false && givenUp == false) {
-                x = Math.random();
-
-                x = 6 * x;
-
-                x = Math.floor(x);
-
-                if (x == document.getElementById("myNumber").value) {
-                    gotIt = true;
-                } else {
-                    guesses++;
-
-                    if(guesses > 10) {
-                        givenUp = true;
-                    }
-                }
-            }
-
-            if (gotIt == true){
-
-                alert("Got it! It was " + x + ". It took me " + guesses + " guesses");
-
-            } else {
-                alert("I give up!");
-            }
+            return(a+b);
 
         }
+
+        document.getElementById("paragraph").innerHTML=adding(3, 4);
 
     </script>
 
