--- a/3. Javascript/index.html
+++ b/3. Javascript/index.html
@@ -8,23 +8,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <style>
+
+        body {
+            font-family: Verdana, Geneva, sans-serif;
+        }
+
         #box {
             width: 200px;
             height: 200px;
             background-color: red;
             display: none;
+            position: relative;
+        }
+
+        #time {
+            font-weight: bold;
         }
     </style>
     
 </head>
 
 <body>
+    <h1>Test your reaction time!</h1>
+    <p>Click on the boxes and circles as they appear.</p>
 
-    <p>Your time: <span id="time"></span></p>
+    <p>Your time: <span id="time">0</span> seconds</p>
 
     <div id="box"></div>
 
     <script type="text/javascript">
+
+        function getRandomColor() {
+            var letters = '0123456789ABCDEF'.split('');
+            var color = '#';
+            for(var i = 0; i < 6; i++) {
+
+                color += letters[Math.round(Math.random() * 15)];
+
+            }
+            return color;
+        }
+
+
         var clickedTime; var createdTime; var reactionTime;
 
         appear();
@@ -42,6 +67,18 @@
         }
 
         function appear () {
+
+            if(Math.random() > 0.5) {
+                document.getElementById("box").style.borderRadius = "100px";
+            } else {
+                document.getElementById("box").style.borderRadius = "0px";
+            }
+
+            document.getElementById("box").style.top=(Math.random()*300)+"px";
+
+            document.getElementById("box").style.left=(Math.random()*300)+"px";
+
+            document.getElementById("box").style.backgroundColor = getRandomColor();
 
             setTimeout(function() {
                 document.getElementById("box").style.display="block";
