Started using jQuery with click functions

--- a/4. jQuery/index.html
+++ b/4. jQuery/index.html
@@ -7,18 +7,40 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <style>
+        .square {
+            width: 200px;
+            height: 200px;
+            background-color: red;
+            margin-top: 10px;
+        }
+
+        #circle {
+            width: 200px;
+            height: 200px;
+            border-radius: 100px;
+            background-color: green;
+        }
+    </style>
+
     <script type="text/javascript" src="jquery.min.js"></script>
     
 </head>
 
 <body>
+
+    <div class="square"></div>
+    <div class="square"></div>
+    <div id="circle"></div>
     
     <script>
-        if(typeof jQuery != "undefined") {
-            alert('jQuery is installed');
-        } else {
-            alert('jQuery is not installed');
-        }
+
+        $("div").click(function() {
+
+            alert("Div clicked!");
+
+        });
+
     </script>
 
 </body>
