--- a/4. jQuery/index.html
+++ b/4. jQuery/index.html
@@ -28,12 +28,17 @@
 </head>
 
 <body>
-
-    <h1>Asynchronous Javascript and XML</h1>
     
     <script>
 
-        
+        //var regex = /great/i; // i Insensitive
+        var regex = /great/g; // g Everywhere
+
+        var string = "Regex is great!";
+
+        var result = string.match(regex);
+
+        alert(result);
 
     </script>
 
