--- a/4. jQuery/index.html
+++ b/4. jQuery/index.html
@@ -8,19 +8,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <style>
-        .square {
-            width: 200px;
-            height: 200px;
-            background-color: red;
-            margin-top: 10px;
+        
+        #wrapper {
+            width: 600px;
+            margin: 0 auto;
+            font-family: helvetica;
+            font-size: 1.2em;
         }
 
-        #circle {
-            width: 200px;
-            height: 200px;
-            border-radius: 100px;
-            background-color: green;
+        input {
+            width: 300px;
+            height: 30px;
+            padding: 5px;
+            border-radius: 5px;
+            font-size: 1.2em;
+            border: 1px solid grey;
+            margin-bottom: 10px;
         }
+
+        label {
+            width: 200px;
+            float: left;
+            padding: 7px;
+        }
+
+        #submitButton {
+            height: 50px;
+            margin-left: 214px;
+            width: 100px;
+        }
+
+        #error {
+            color: red;
+            margin: 20px;
+        }
+
     </style>
 
     <script type="text/javascript" src="jquery.min.js"></script>
@@ -28,17 +50,65 @@
 </head>
 
 <body>
-    
+
+    <div id="wrapper">
+
+    <div id="error"></div>
+
+        <form id="validationForm">
+
+            <label for="email">Email</label>
+            <input name="email" id="email"></input>
+
+            <label for="phone">Telephone</label>
+            <input name="phone" id="phone"></input>
+
+            <label for="pass">Password</label>
+            <input name="pass" type="password" id="firstPassword"></input>
+
+            <label for="pass">Confirm Password</label>
+            <input name="pass" type="password" id="secondPassword"></input>
+
+            <input id="submitButton" type="submit" value="Submit"/>
+
+        </form>
+
+    </div>
+
     <script>
 
-        //var regex = /great/i; // i Insensitive
-        var regex = /great/g; // g Everywhere
+        $("#validationForm").submit(function (event) {
 
-        var string = "Regex is great!";
+            var errorMessage = "";
 
-        var result = string.match(regex);
+            event.preventDefault();
 
-        alert(result);
+            function isValidEmailAddress(emailAddress) {
+                var pattern = new RegExp(/^((([a-z]|\d|[!#\$%&'\*\+\-\/=\?\^_`{\|}~]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])+(\.([a-z]|\d|[!#\$%&'\*\+\-\/=\?\^_`{\|}~]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])+)*)|((\x22)((((\x20|\x09)*(\x0d\x0a))?(\x20|\x09)+)?(([\x01-\x08\x0b\x0c\x0e-\x1f\x7f]|\x21|[\x23-\x5b]|[\x5d-\x7e]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(\\([\x01-\x09\x0b\x0c\x0d-\x7f]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF]))))*(((\x20|\x09)*(\x0d\x0a))?(\x20|\x09)+)?(\x22)))@((([a-z]|\d|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(([a-z]|\d|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])*([a-z]|\d|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])))\.)+(([a-z]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(([a-z]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])*([a-z]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])))\.?$/i);
+                return pattern.test(emailAddress);
+            };
+
+            if(!isValidEmailAddress($("#email").val())) {
+                errorMessage = "<br/> Please enter a valid email address.";
+            }
+
+            if(!$.isNumeric($("#phone").val())) {
+                errorMessage = errorMessage + "<br/>Please enter a valid phone number.";
+            }
+
+            if($("#firstPassword").val() != $("#secondPassword").val()) {
+                errorMessage = errorMessage + "<br/>Please enter a matching password.";
+            }
+
+            if(errorMessage == "") {
+                alert("Success");
+            } else {
+
+                $("#error").html(errorMessage);
+
+            }
+
+        })
 
     </script>
 
