--- a/4. jQuery/codeplayer.html
+++ b/4. jQuery/codeplayer.html
@@ -37,12 +37,66 @@
     	}
 
     	#toggles {
+    		width: 174.8px;
+    		margin: 0 auto;
     		list-style: none;
+            border: 1px solid grey;
+            border-radius: 3px;
+            height: 27px;
+            padding: 0;
+            position: relative;
+            top: 5px;
     	}
 
     	#toggles li {
     		float:left;
+            border-right: 1px solid grey;
+            padding: 4px;
     	}
+
+        .clear {
+            clear: both;
+        }
+
+        .codeContainer {
+            height: 100%;
+            width: 50%;
+            float: left;
+            position: relative;
+        }
+
+        .codeContainer textarea {
+            width: 100%;
+            height: 100%;
+            border: none;
+            border-right: 1px solid grey;
+            font-family: monotype;
+            font-size: 90%;
+            padding: 5px;
+            box-sizing: border-box;
+        }
+
+        .codeLabel {
+            position: absolute;
+            color: gray;
+            right: 10px;
+            top: 10px;
+        }
+
+        #CSSContainer, #JSContainer {
+            display: none;
+        }
+
+        iframe {
+            height: 100%;
+            position: relative;
+            left: 20px;
+            border: none;
+        }
+
+        .selected {
+            background-color: grey;
+        }
 
     </style>
 
@@ -67,16 +121,89 @@
 
 			<ul id="toggles">
 
-				<li>HTML</li>
-				<li>CSS</li>
-				<li>JS</li>
-				<li>Run</li>
+				<li class="toggle selected">HTML</li>
+				<li class="toggle">CSS</li>
+				<li class="toggle">JS</li>
+				<li class="toggle selected" style="border:none">Result</li>
 
 			</ul>
 
 		</div>
 
+        <div class="clear"></div>
+
+        <div class="codeContainer" id="HTMLContainer">
+
+            <div class="codeLabel">HTML</div>
+
+            <textarea id="htmlCode"><div id="test"></div></textarea>
+
+        </div>
+
+        <div class="codeContainer" id="CSSContainer">
+
+            <div class="codeLabel">CSS</div>
+
+            <textarea id="cssCode">html { background-color: blue }</textarea>
+
+        </div>
+
+        <div class="codeContainer" id="JSContainer">
+
+            <div class="codeLabel">JS</div>
+
+            <textarea id="jsCode">document.getElementById("test").innerHTML="It's working!"</textarea>
+
+        </div>
+
+        <div class="codeContainer" id="ResultContainer">
+
+            <div class="codeLabel">Result</div>
+
+            <iframe id="resultFrame"></iframe>
+
+        </div>
+
 	</div>
+
+    <script>
+
+        var windowHeight = $(window).height();
+        var menuBarHeight = $("#top").height();
+
+        var codeContainerHeight = windowHeight - menuBarHeight;
+
+        $("codeContainer").height(codeContainerHeight + "px");
+
+        $(".toggle").click(function(){
+
+            $(this).toggleClass("selected");
+
+            var activeDiv = $(this).html();
+
+            $("#" + activeDiv + "Container").toggle();
+
+            var showingDivs = $(".codeContainer").filter(function() {
+
+                return($(this).css("display") != "none");
+
+            }).length;
+
+            var width = 100/showingDivs;
+
+            $(".codeContainer").width(width+"%");
+
+        });
+
+        $("#runButton").click(function() {
+
+            $("iframe").contents().find("html").html('<style>' + $("#cssCode").val() +'</style>' + $("#htmlCode").val());
+
+            document.getElementById("resultFrame").contentWindow.eval($("#jsCode").val());
+
+        });
+
+    </script>
 
 </body>
 </html>
