--- a/5. Bootstrap/index.html
+++ b/5. Bootstrap/index.html
@@ -27,6 +27,41 @@
     <![endif]-->
   </head>
   <body>
+
+    <div class="navbar navbar-default">
+
+      <div class="container">
+
+        <div class="navbar-header">
+
+          <a href="" class="navbar-brand">My Website</a>
+
+          <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+
+          <span class="sr-only">Toggle navigation</span>
+
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+
+        </div>
+
+        <div class="collapse navbar-collapse">
+
+          <ul class="nav navbar-nav">
+
+            <li class="active"><a href="">Page 1</a></li>
+            <li><a href="">Page 2</a></li>
+            <li><a href="">Page 3</a></li>
+
+          </ul>
+
+        </div>
+
+      </div>
+
+    </div>
+
     <h1>Hello, world!</h1>
 
     <div class="container">
